Makefile modified to compile only modified files

--- a/fpga/lin/examples/mt/Makefile
+++ b/fpga/lin/examples/mt/Makefile
@@ -1,30 +1,70 @@
 CC=g++
 CFLAGS = -g -Wall  -O3 -fopenmp -Wno-uninitialized
-#CFLAGS = -g -Wall -Wimplicit-function-declaration -O3
 
 
 RINC = $(ROSTA_SDK_DIR)/lin/ApiLib/include
 RLIB = $(ROSTA_SDK_DIR)/lin/ApiLib
 
 
-
 FLIB = -L$(RLIB)  -lRostaPCIeAPI -lRC47 
-
-
-
 ILIB = -I$(RINC)
 
 
 
-TEST2=rc47_mt_12
+SOURCES=rc47_mt_12.cpp mt_cpu.cpp 
+JSON_SRC=jsoncpp/jsoncpp.cpp
+OBJECTS=$(SOURCES:.cpp=.o)
+JSON_OBJ=jsoncpp.o
+EXECUTABLE=rc47_mt_12
 
 
-all:  $(TEST2)
+all: $(SOURCES) $(EXECUTABLE) $(JSON_OBJ)
+
+.cpp.o:
+	$(CC) $(ILIB) $(CFLAGS) -c $< 
+
+$(JSON_OBJ): $(JSON_SRC)
+	$(CC) $(CFLAGS) -c $< 
+
+$(EXECUTABLE): $(OBJECTS) $(JSON_OBJ)
+	$(CC) $(LDFLAGS) $(OBJECTS) $(JSON_OBJ) -o $@ $(FLIB)
+
+
 
 clean:
-	-rm -f $(TEST2)
+	-rm -f $(EXECUTABLE)
+	-rm -f *.o
+
+
+
+# CC=g++
+# CFLAGS = -g -Wall  -O3 -fopenmp -Wno-uninitialized
+# #CFLAGS = -g -Wall -Wimplicit-function-declaration -O3
+
+
+# RINC = $(ROSTA_SDK_DIR)/lin/ApiLib/include
+# RLIB = $(ROSTA_SDK_DIR)/lin/ApiLib
+
+
+
+# FLIB = -L$(RLIB)  -lRostaPCIeAPI -lRC47 
+
+
+
+# ILIB = -I$(RINC)
+
+
+
+# TEST2=rc47_mt_12
+
+
+# all:  $(TEST2)
+
+# clean:
+# 	-rm -f $(TEST2)
 	
-$(TEST2): $(TEST2).cpp mt_cpu.cpp
-	$(CC) $(ILIB) $(CFLAGS) -o $@ $(TEST2).cpp mt_cpu.cpp jsoncpp/jsoncpp.cpp $(FLIB)	 
+# $(TEST2): $(TEST2).cpp mt_cpu.cpp
+# 	$(CC) $(ILIB) $(CFLAGS) -o $@ $(TEST2).cpp mt_cpu.cpp jsoncpp/jsoncpp.cpp $(FLIB)	 
+
 
 
